istio/traffic-split-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-traffic-split
spec:
  hosts:
  - "*"
  gateways:
  - canary-gateway
  http:
  - route:
    - destination:
        host: canary-app
        subset: v1
      weight: 80
    - destination:
        host: canary-app
        subset: v2
      weight: 20
